--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -62,13 +62,12 @@
   }
   .table-row {
     margin: 0;
-    border-bottom: none;
     flex-wrap: wrap;
     line-height: 1.2rem;
     white-space: inherit;
-  }
-  .table-row:last-of-type {
-    border-bottom: 1px solid #e3e3e3;
+    border-top: none;
+    border-left: none;
+    border-right: none;
   }
   .table-header {
     display: none;
